--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BHVR</title>
+    <title>OpenPulse - Free and Open Source Analytics Platform</title>
+
+    <script
+      src="http://localhost:3000/analytics.js"
+      data-site-id=""
+      data-debug="0"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
