feat: add validation for required analytics script attributes and export EventType
- Added validation to ensure analyticsHost and siteId attributes are present in script tag
- Exported EventType from tracking schema for type safety
- Cleaned up whitespace formatting in ClickHouse schema

--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,9 @@
 
     <script
       src="http://localhost:3000/analytics.js"
-      data-site-id=""
-      data-debug="0"
+      data-site-id="si_0199fc6c-4e37-7145-aca2-2707b7416504"
+      data-debug="1"
+      data-analytics-host="http://localhost:3000"
     ></script>
   </head>
   <body>
